--- a/style.css
+++ b/style.css
@@ -67,4 +67,13 @@ main{
  nav ul li:last-of-type{
   padding-bottom: 8px;
  }
+
+ nav ul.hidden{
+  display: none;
+ }
+
+ .menu-icon{
+  display: flex;
+  align-items: center;
+ }
 }
